--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-hook-form": "^7.63.0",
     "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
+    "react-paystack": "^6.0.0",
     "react-router-dom": "^7.9.3",
     "tailwindcss": "^4.1.14",
     "yup": "^1.7.1",
